<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/UserNameTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/login_activity_username_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UserNameTextField"
        android:layout_marginTop="28dp"
        android:text="@string/login_activity_username_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasswordTextField"
        android:layout_below="@+id/UserNameTextField"
        android:layout_marginTop="15dp"
        android:text="@string/login_activity_password_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/PasswordTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_activity_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/UserNameTextField"
        android:layout_below="@+id/PasswordTextField"
        android:layout_marginTop="20dp"
        android:text="@string/LoginButton" />

    <Button
        android:id="@+id/NewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/LoginButton"
        android:layout_alignBottom="@+id/LoginButton"
        android:layout_alignLeft="@+id/UserNameTextField"
        android:text="@string/NewUser" />

    <Button
        android:id="@+id/ForgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/ForgotPassword" />

</RelativeLayout>