<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentHomeActivity" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:columnCount="1" >

        <Button
            android:id="@+id/StatisticsButton"
            style="@style/Theme.Cse"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="Statistics" />

        <Button
            android:id="@+id/MenuButton"
            style="@style/Theme.Cse"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="0"
            android:text="@string/MenuButton" />

        <Button
            android:id="@+id/QuestionsButton"
            style="@style/Theme.Cse"
            android:layout_width="99dp"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/QestionsButton" />
    </GridLayout>

    <ImageButton
    android:id="@+id/NewImage"
    style="@style/Theme.Cse"
    android:layout_width="250dp"
    android:layout_height="200dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="40dp"
    android:background="@drawable/new_mail"
    android:contentDescription="@string/NewImage" />

    <TextView
        android:id="@+id/welcomeStudent"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/gridLayout1"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_below="@+id/gridLayout1"
        android:layout_marginTop="18dp"
        android:text="@string/welcomeStudent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewImage"
        android:layout_centerVertical="true"
        android:src="@drawable/circle" />

    <TextView
        android:id="@+id/newQs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_centerVertical="true"
        android:layout_marginRight="19dp"
        android:text="10" />

</RelativeLayout>