<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnswerPageActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp" >

            <ToggleButton
                android:id="@+id/toggleHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/submit"
                android:layout_alignBottom="@+id/submit"
                android:layout_toRightOf="@+id/submit"
                android:text="@string/toggleHint"
                android:textOff="Show Hint"
                android:textOn="Hide Hint" />

            <TextView
                android:id="@+id/AnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="17dp"
                android:text="@string/hello_world" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/answersGroup"
                android:layout_below="@+id/answersGroup"
                android:layout_marginTop="18dp"
                android:text="@string/submit" />

            <RadioGroup
                android:id="@+id/answersGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/AnswerText"
                android:layout_marginTop="14dp" >

                <RadioButton
                    android:id="@+id/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />
            </RadioGroup>

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/toggleHint"
                android:layout_marginTop="23dp"
                android:text="TextView" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>